# conductor

./: .dockerignore  .env.example  .gitignore  BREAKTHROUGH.md  CHANGELOG_CLI_UNIFICADO.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONDUCTOR_INTERFACE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.service  INTEGRATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  NEW_INTERFACE_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  add_emojis_to_agents.py  arquitetura_conductor.md  career_architect.md  code_review_report.md  comandos_conductor.txt  compose-command.txt  conductor  conductor.md  config.yaml  config.yaml.backup.1757816982  config.yaml.example  create_execution_plan_validator.py  debug_executor.py  demo_tool_permissions.py  docker-compose.test.yml  docker-compose.yml  generate_logs.sh  normalize_agent_names.py  pitaco.txt  primoia.md  promtail-config.yml  (+27 more)
.bmad-core/: install-manifest.yaml
.github/: PULL_REQUEST_TEMPLATE.md
agent_templates/: README.md
benchmarks/: README.md  run_benchmark.py
config/: agent-template.md  ai_providers.yaml  global.yaml  onboarding_rules.yaml  orchestrator-template.md  state-template.json  workspaces.yaml  workspaces.yaml.DEPRECATED
custom_tools/: example_tool.py
docs/: 360_EVALUATION_LOG.md  360_EVALUATION_SOP.md  AGENT_EVALUATION_SUMMARY.md  AGENT_IMPROVEMENT_WORKFLOW.md  CLI_GUIDE.md  DOCUMENTATION_GUIDE.md  GEMINI_ARCH_SPEC.md  GENESIS_EXECUTION_PLAN.md  IMPROVEMENT_PLAN_ADMIN_PY.md  ONBOARDING_NEW_PROJECT.md  ONBOARDING_TEAMS_PLAN.md  README.md  SAGA-013-HOTFIX.md  SAGA-013-IMPLEMENTATION.md  TESTING_STRATEGY.md  XML_FLOW_DEBUG.md  XML_PROMPT_FLOW_ANALYSIS.md  advanced-optimizations.md  agent-anatomy.md  agent-learning-cycle.md  architecture.md  cli-integration.md  demo-plan.md  docker-usage.md  vision-agent-forge.md
examples/: README.md  agent-template.py  cli-agents-demo.py  ollama-analysis.py  simple-agent-demo.py  smart-cli-conductor.py  test-conditional-activation.sh  test-hybrid-architecture.sh
examples/desafio-meli-entrega/: .gitignore  README.md  docker-compose.yml  prompts.md  pyproject.toml  run.md  run.sh
examples/desafio-meli-entrega/app/: main.py
examples/desafio-meli-entrega/app/api/v1/: items.py
examples/desafio-meli-entrega/app/core/: config.py  logging_config.py
examples/desafio-meli-entrega/app/models/: item.py
examples/desafio-meli-entrega/app/repository/: item_repository.py
examples/desafio-meli-entrega/app/services/: item_service.py
examples/desafio-meli-entrega/docs/: futuras_melhorias.md  persona_claude.md  persona_gemini.md
examples/desafio-meli-entrega/docs/sagas/: 02_o_item.md  02a_observabilidade.md
examples/desafio-meli-entrega/tests/: test_api.py  test_models.py  test_services.py
scripts/: admin.py  (+28 more)
(+762 files in other folders)
