[tool.poetry]
name = "conductor"
version = "2.0.0"
description = "Conductor Framework: Professional AI Agent Management"
authors = ["Primo AI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-json-logger = "^3.3.0"
pymongo = "^4.3"
prompt-toolkit = "^3.0.52"
pygments = "^2.19.2"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
requests = "^2.31.0"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-docker = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conductor-admin = "src.cli.admin:main"
conductor-agent = "src.cli.agent:main"
